--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dataggo/node-akeneo-api",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A Node Rest Client for the Akeneo PIM",
   "author": "Constant B <contact@dataggo>",
   "license": "MIT",
@@ -20,12 +20,12 @@
     "watch": "tsc  -w -p tsconfig.json && tsc -w -p tsconfig-cjs.json",
     "prepare": "husky install",
     "lint": "eslint src --max-warnings 0",
-    "test": "jest",
+    "test": "jest --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "prepublishOnly": "npm run build",
     "publish": "npm publish --access public"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.7.0",
     "qs": "^6.9.6",
     "ramda": "^0.27.1"
   },
@@ -44,10 +44,10 @@
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.1.3",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "jest-html-reporters": "^2.1.2",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^29.2.4",
     "typedoc": "^0.25.2",
     "typescript": "^4.1.3"
   },
@@ -70,9 +70,6 @@
       "src/**/*.(t|j)s"
     ],
     "coverageDirectory": "coverage",
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "axios": "axios/dist/node/axios.cjs"
-    }
+    "testEnvironment": "node"
   }
 }
